@startuml
namespace logic {
    class CartAddLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + CartAdd(in *oms.CartAddReq) (*oms.CartAddResp, error)

    }
    class CartDeleteLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + CartDelete(in *oms.CartDeleteReq) (*oms.CartDeleteResp, error)

    }
    class CartListLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + CartList(in *oms.CartListReq) (*oms.CartListResp, error)

    }
    class CartUpdateLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + CartUpdate(in *oms.CartUpdateReq) (*oms.CartUpdateResp, error)

    }
    class OrderAddLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + OrderAdd(in *oms.OrderAddReq) (*oms.OrderAddResp, error)

    }
    class OrderDeleteLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + OrderDelete(in *oms.OrderDeleteReq) (*oms.OrderDeleteResp, error)

    }
    class OrderInfoLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + OrderInfo(in *oms.OrderInfoReq) (*oms.OrderInfoResp, error)

    }
    class OrderListLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + OrderList(in *oms.OrderListReq) (*oms.OrderListResp, error)

    }
    class OrderUpdateLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + OrderUpdate(in *oms.OrderUpdateReq) (*oms.OrderUpdateResp, error)

    }
    class ReturnApplyAddLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + ReturnApplyAdd(in *oms.ReturnApplyAddReq) (*oms.ReturnApplyAddResp, error)

    }
    class ReturnApplyDeleteLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + ReturnApplyDelete(in *oms.ReturnApplyDeleteReq) (*oms.ReturnApplyDeleteResp, error)

    }
    class ReturnApplyInfoLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + ReturnApplyInfo(in *oms.ReturnApplyInfoReq) (*oms.ReturnApplyInfoResp, error)

    }
    class ReturnApplyListLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + ReturnApplyList(in *oms.ReturnApplyListReq) (*oms.ReturnApplyListResp, error)

    }
    class ReturnApplyUpdateLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + ReturnApplyUpdate(in *oms.ReturnApplyUpdateReq) (*oms.ReturnApplyUpdateResp, error)

    }
    class ReturnReasonAddLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + ReturnReasonAdd(in *oms.ReturnReasonAddReq) (*oms.ReturnReasonAddResp, error)

    }
    class ReturnReasonDeleteLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + ReturnReasonDelete(in *oms.ReturnReasonDeleteReq) (*oms.ReturnReasonDeleteResp, error)

    }
    class ReturnReasonListLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + ReturnReasonList(in *oms.ReturnReasonListReq) (*oms.ReturnReasonListResp, error)

    }
    class ReturnReasonUpdateLogic << (S,Aquamarine) >> {
        - ctx context.Context
        - svcCtx *svc.ServiceContext

        + ReturnReasonUpdate(in *oms.ReturnReasonUpdateReq) (*oms.ReturnReasonUpdateResp, error)

    }
}
"logx.Logger" *-- "logic.CartAddLogic"
"logx.Logger" *-- "logic.CartDeleteLogic"
"logx.Logger" *-- "logic.CartListLogic"
"logx.Logger" *-- "logic.CartUpdateLogic"
"logx.Logger" *-- "logic.OrderAddLogic"
"logx.Logger" *-- "logic.OrderDeleteLogic"
"logx.Logger" *-- "logic.OrderInfoLogic"
"logx.Logger" *-- "logic.OrderListLogic"
"logx.Logger" *-- "logic.OrderUpdateLogic"
"logx.Logger" *-- "logic.ReturnApplyAddLogic"
"logx.Logger" *-- "logic.ReturnApplyDeleteLogic"
"logx.Logger" *-- "logic.ReturnApplyInfoLogic"
"logx.Logger" *-- "logic.ReturnApplyListLogic"
"logx.Logger" *-- "logic.ReturnApplyUpdateLogic"
"logx.Logger" *-- "logic.ReturnReasonAddLogic"
"logx.Logger" *-- "logic.ReturnReasonDeleteLogic"
"logx.Logger" *-- "logic.ReturnReasonListLogic"
"logx.Logger" *-- "logic.ReturnReasonUpdateLogic"


@enduml
